--- a/src/styles/DrawerToggleButton.css
+++ b/src/styles/DrawerToggleButton.css
@@ -2,12 +2,12 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  height: 24px;
-  width: 30px;
+  height: 40px;
+  width: 20px;
   background: transparent;
   border: none;
   cursor: pointer;
-  padding: 0;
+  padding: 0 1px 3px 1px;
   box-sizing: border-box;
 }
 
@@ -17,6 +17,6 @@
 
 .toggle_button_line {
   width: 30px;
-  height: 1px;
-  background: white;
+  height: 2.5px;
+  background: #848080;
 }
