--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Lato');
+@import url('https://fonts.googleapis.com/css?family=Lato|News+Cycle');
 
 .landing-intro {
   font-family: 'Lato', sans-serif;
@@ -29,20 +29,12 @@
   border-radius: 5px;
 }
 
-.content h1 {
+.content h2 {
   color: rgb(87,77,79);
   text-shadow: 0px 0px 300px #000000;
   font-size: 200%;
   text-align: left;
   padding: 3% 0 0 3%;
-  margin: auto;
-}
-
-.content p {
-  color: rgb(87,77,79);
-  font-size: 90%;
-  text-align: left;
-  padding: 1% 1% 3% 3%;
   margin: auto;
 }
 
@@ -87,33 +79,118 @@
 }
 
 .btn-project {
+  display: block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  text-decoration: none;
+  margin: auto;
+  margin-top: 20px;
   border-radius: 9px;
-  background-color: rgba(255,255,255,.5);
+  background-color: rgba(255,255,255, .5);
   border: solid rgb(87,77,79) 3px;
   color: rgb(87,77,79);
   text-align: center;
   font-size: 100%;
   padding: 5px 15px;
   width: 200px;
-  transition: all 0.5s;
   cursor: pointer;
-  margin: auto;
-  text-transform: uppercase;
-  display: block;
+}
+
+.btn-project:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(87,77,79);
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transform-origin: 50%;
+  transform-origin: 50%;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+
+.btn-project:hover, .btn-project:focus, .btn-project:active {
+  color: white;
+}
+
+.btn-project:hover:before, .btn-project:focus:before, .btn-project:active:before {
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+
+.btn-team {
+  font-family: "News Cycle", sans-serif;
   text-decoration: none;
-  margin-top: 20px;
+  position: relative;
+  text-align: right;
+}
+
+.btn-services {
+  font-family: "News Cycle", sans-serif;
+  text-decoration: none;
+  margin-left: auto;
 }
 
 .point {
-  padding: 5%;
+  padding-left: 3%;
+  padding-right: 3%;
 }
 
-.landing-details {
+
+.landing-story {
   font-size: 100%;
-  line-height: 210%;
-  text-align: justify;
-  margin: 3%;
+  text-align: center;
   font-family: "Lato", sans-serif;
+  margin: 5% 7% 5% 7%;
+}
+
+.landing-services {
+  font-family: "Lato", sans-serif;
+  margin: 5% 7% 5% 7%;
+}
+
+.landing-services h2 {
+  font-family: "News Cycle", sans-serif;
+  text-transform: uppercase;
+  font-size: 200%;
+  text-align: center;
+  color: #ba3f3f
+}
+
+.landing-services table {
+  width: 100%;
+  max-width: 100%;
+  border-collapse: collapse;
+  text-align: center;
+  table-layout: fixed;
+}
+
+
+.icon {
+  font-size: 500%;
+}
+
+.icon-label {
+  font-family: "Lato", sans-serif;
+  font-size: 100%;
+}
+
+.landing-projects {
+  margin-top: 5%;
 }
 
 .slider-image {
@@ -164,7 +241,6 @@
 }
 
 .slider-wrapper:hover img {
-  filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feComponentTransfer color-interpolation-filters="sRGB"><feFuncR type="linear" slope="0.6" /><feFuncG type="linear" slope="0.6" /><feFuncB type="linear" slope="0.6" /></feComponentTransfer></filter></svg>#filter');
   filter: brightness(0.6);
   -webkit-filter: brightness(0.6);
 }
@@ -193,6 +269,15 @@
   transform: translate3d(0,0,0);
 }
 
+.horizontal-line {
+  border: 0;
+  height: 0;
+  border-top: 1px solid rgba(0,0,0,0.1);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  margin-left: 3%;
+  margin-right: 3%;
+}
+
 .slick-prev:before,
 .slick-next:before {
   color: black!important;
@@ -216,5 +301,28 @@
   p {
     font-size: 80%;
     line-height: 150%;
+  }
+  .icon {
+    font-size: 300%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .icon {
+    font-size: 400%;
+  }
+  .table {
+    width: 100%;
+  }
+  .table td {
+    display: block;
+    width: 100%;
+  }
+  .table tr {
+    display: block;
+    margin-bottom: 30px;
+  }
+  .table tr tr {
+    margin-bottom: 0;
   }
 }
