--- a/src/styles/Toolbar.css
+++ b/src/styles/Toolbar.css
@@ -6,7 +6,7 @@
   top: 0px;
   left: 0px;
   width: 100%;
-  background: rgba(255,255,255,.7);
+  background: rgba(255,255,255,.8);
   height: 70px;
 }
 
@@ -37,15 +37,49 @@
   padding: 0 0.5rem;
 }
 
-.toolbar_nav-items a {
+.toolbar_nav-itemsss a {
   color: rgb(87,77,79);
   text-decoration: none;
 }
 
-.toolbar_nav-items a:hover,
-.toolbar_nav-items a:active {
+.toolbar_nav-itemsss a:hover,
+.toolbar_nav-itemsss a:active {
   color: #000000;
   font-weight: bold;
+}
+
+.toolbar-links {
+  text-decoration: none;
+  color: black;
+  text-transform: lowercase;
+  display: inline-block;
+  vertical-align: middle;
+  overflow: hidden;
+  position: relative;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  padding-bottom: 5px;
+}
+
+.toolbar-links:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  right: 100%;
+  bottom: 0;
+  background: #E3B51D;
+  height: 4px;
+  -webkit-transition-property: right;
+  transition-property: right;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+
+.toolbar-links:hover:before, .toolbar-links:focus:before, .toolbar-links:active:before {
+  right: 0;
 }
 
 @media (max-width: 768px) {
