--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -33,8 +33,7 @@
 .contact-information {
   font-family: "Lato", sans-serif;
   text-align: center;
-  height: 30vh;
-  margin-top: 2%;
+  margin: 2% auto 5% auto;
 }
 
 .mui-tabs__bar>li.mui--is-active>a {
