--- a/src/styles/Services.css
+++ b/src/styles/Services.css
@@ -1,3 +1,143 @@
-.service-container {
-  margin-top: 20%;
+.service-photo {
+  font-family: 'Lato', sans-serif;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 80vh;
+  background: url('./../images/services-cover.jpg') 50% 30% repeat;
+  background-size: cover;
+  display: table;
+}
+
+.service-photo h1 {
+  font-family: 'Lato', sans-serif;
+  text-transform: uppercase;
+  color: white;
+  font-size: 400%;
+}
+
+.cover-overlay {
+  background-color: rgba(0,0,0,0.3);
+  display: table-cell;
+  vertical-align: middle;
+  width: 100%;
+  height: 100%;
+  max-width: none;
+  text-align: center;
+}
+
+.services-contact {
+  font-family: 'Lato', sans-serif;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 50vh;
+  background: url('./../images/services-contact.JPG') 50% 55% repeat;
+  background-size: cover;
+  display: table;
+}
+
+.service-info {
+  width: 70%;
+  margin: auto;
+}
+
+.service-icon {
+  font-size: 500%;
+}
+
+.services {
+  text-align: center;
+  width: 80%;
+  margin: 3% auto;
+}
+
+.service-info h2 {
+  font-family: 'News Cycle', sans-serif;
+}
+
+.service-info p {
+  font-family: 'Lato', sans-serif;
+}
+
+.overlay {
+  background-color: rgba(0,0,0,0.5);
+  display: table-cell;
+  vertical-align: middle;
+  width: 100%;
+  height: 100%;
+  max-width: none;
+  text-align: center;
+}
+
+.overlay h2 {
+  color: white;
+  font-family: 'News Cycle', sans-serif;
+  text-transform: uppercase;
+  text-align: right;
+  font-size: 250%;
+  margin-right: 70px;
+}
+
+.overlay p {
+  color: white;
+  font-family: 'Lato', sans-serif;
+  margin-right: 70px;
+  text-align: right;
+}
+
+.why-us {
+  text-align: center;
+  margin: 3% auto;
+  width: 80%;
+}
+
+.why-us h1{
+  margin-bottom: 3%;
+  text-transform: uppercase;
+}
+
+.reasons {
+  width: 80%;
+  margin: auto;
+}
+
+.reasons h2 {
+  font-family: 'News Cycle', sans-serif;
+}
+
+.reasons p {
+  font-family: 'Lato', sans-serif;
+}
+
+.btn-contact {
+  font-family: "News Cycle", sans-serif;
+  text-decoration: none;
+  color: #696956;
+  background: #FFF;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 100%;
+  width: 175px;
+  cursor: pointer;
+  padding: 3px;
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 8px 15px rgba(0, 0, 0, .1);
+  position: relative;
+  overflow: hidden;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: color, background-color;
+  transition-property: color, background-color;
+  margin-top: 1%;
+  margin-right: 70px;
+  text-transform: uppercase;
+}
+
+.btn-contact:hover, .btn-contact:focus, .btn-contacts:active {
+  background-color: #696956;
+  color: white;
 }
